crates/toml_edit/tests/fixtures/invalid/float/trailing-us-exp.stderr
TOML parse error at line 2, column 21
  |
2 | trailing-us-exp = 1_e2
  |                     ^
Invalid integer
Expected digit
